# ficus

./: .gitattributes  .gitignore  .merlin  AUTHORS  CLAUDE.md  GNUmakefile  Makefile  README.md  newvec2_pr.md  newvec2_report.md
compiler/: Ast.fx  AstPP.fx  AstTypeChecker.fx  Ast_pp.fx  Ast_typecheck.fx  C_form.fx  C_gen_code.fx  C_gen_fdecls.fx  C_gen_std.fx  C_gen_types.fx  C_post_adjust_decls.fx  C_post_rename_locals.fx  C_pp.fx  Compiler.fx  KAnnotate.fx  KConstFold.fx  KFastIdx.fx  KFlatten.fx  KForm.fx  KInline.fx  KLift.fx  KLiftSimple.fx  KMangle.fx  KNormalize.fx  KPP.fx  KRemoveUnused.fx  KTailRec.fx  K_annotate.fx  K_cfold_dealias.fx  K_copy_n_skip.fx  K_declosure.fx  K_fast_idx.fx  K_flatten.fx  K_form.fx  K_freevars.fx  K_fuse_loops.fx  K_inline.fx  K_lift.fx  K_lift_simple.fx  K_loop_inv.fx  (+12 more)
doc/: ficus_intro.md  ficustut.md  fxtemplate.latex  impl_notes.md
docs/: annotate2_handoff.md  annotate2_report.md  ccache_setup_handoff.md  ci_pr27_linux_handoff.md  ci_pr27_linux_resolution.md  ctrlflow1_brief.md  ctrlflow1_report.md  diag1_brief.md  diag1_report.md  doctut1_brief.md  doctut1_report.md  fancy-inventing-orbit.md  ficus_design_log.md  ficus_harden_brief_2.md  ficus_harden_report.md  ficus_housekeeping_brief.md  ficus_housekeeping_report.md  ficus_test_infra_brief.md  ficus_todo_2022.md  ficus_todo_2026.md  ficustut_change_map.md  ficustut_rewrite_summary.md  fold1_brief.md  fold1_report.md  fold_census.md  found_bugs.md  fuse_move1_report.md  generics1_brief.md  generics1_report.md  generics_census.md  lsp.md  (+28 more)
misc/cmakeproj/: CMakeLists.txt
(+623 files in other folders)
